--- a/additiveCipher/additiveStyles.css
+++ b/additiveCipher/additiveStyles.css
@@ -3,6 +3,9 @@ body {
   background-color: #f8f9fa;
   font-family: Arial, sans-serif;
 }
+.additviecipher{
+    margin-bottom: 40px;
+}
 
 .container {
   margin-top: 50px;
@@ -75,10 +78,30 @@ tr:last-child td {
   margin-top: 20px;
 }
 
+.ciphertitile{
+    font-weight: bold;
+    color: #007bff;
+    
+}
+
+
 @media (max-width: 576px) {
   th,
   td {
     font-size: 14px;
     padding: 5px;
   }
+}
+
+.cipher-section {
+    margin-top: 30px;
+    
+}
+
+.cipher-rules {
+    font-weight: bold;
+}
+
+.decryption-table {
+    margin-top: 20px;
 }
