--- a/styles.css
+++ b/styles.css
@@ -2,61 +2,32 @@ body {
   background-color: #f8f9fa;
   font-family: Arial, sans-serif;
 }
-
 .container {
-  margin-top: 50px;
+  margin: 50px auto; /* Added margin and set auto for centering */
+  max-width: 600px; /* Added max-width for responsiveness */
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0;
+.menu {
+  padding: 0;
 }
-
-th, td {
-  border: 2px solid #007bff;
-  padding: 10px;
-  text-align: center;
-  font-size: 18px;
+.menu-item {
+  list-style: none;
+  margin-bottom: 10px;
 }
-
-th {
-  background-color: #007bff;
-  color: white;
-}
-
-th:first-child, td:first-child {
-  border-left: 0;
-}
-
-th:last-child, td:last-child {
-  border-right: 0;
-}
-
-tr:last-child td {
-  border-bottom: 0;
-}
-
-.alphabet-item {
+.menu-link {
   display: block;
-  font-weight: bold;
+  background-color: #007bff;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+.menu-link:hover {
+  background-color: #0056b3;
 }
 
-.index-item {
-  font-weight: normal;
-}
-
-.cipher-section {
-  margin-top: 30px;
-}
-
-.cipher-rules {
-  font-weight: bold;
-}
-
-@media (max-width: 576px) {
-  th, td {
-    font-size: 14px;
-    padding: 5px;
-  }
-}
